Fix (AddItem): Change remove button & size of counter on mobile

--- a/app/components/AddItem/AddItem.module.scss
+++ b/app/components/AddItem/AddItem.module.scss
@@ -1,5 +1,5 @@
 .item {
-  @apply grid gap-5 border rounded-2xl p-[16px];
+  @apply grid gap-5 border rounded-2xl p-[16px] overflow-hidden;
   grid-template-columns: 0.5fr 2fr 0.3fr;
   .title {
     @apply cursor-pointer hover:text-[#4495d4];
@@ -7,4 +7,10 @@
 }
 .wrapImage {
   @apply relative h-[100px] w-[100px] block justify-self-center self-center;
+}
+
+@media (max-width: 450px) {
+  .item {
+    @apply text-[12px];
+  }
 }
