--- a/app/components/CounterProduct/CounterProduct.module.scss
+++ b/app/components/CounterProduct/CounterProduct.module.scss
@@ -1,6 +1,14 @@
 .counter {
   @apply flex gap-5 my-3 items-center;
   button {
-    @apply border rounded-2xl p-[15px];
+    @apply border rounded-[50%] px-[7px];
+  }
+}
+
+@media (max-width: 450px) {
+  .counter {
+    button {
+      @apply px-[5px];
+    }
   }
 }
