--- a/app/components/RemoveButton/RemoveButton.module.scss
+++ b/app/components/RemoveButton/RemoveButton.module.scss
@@ -1,3 +1,3 @@
 .btn {
-  @apply block ml-auto self-center p-3 shadow rounded;
+  @apply block ml-auto self-center;
 }
